jsoup changelog

*** Release 1.1.2 (pending)
 * Added :has(selector) pseudo-selector
     <http://github.com/jhy/jsoup/issues/issue/20>

 * Added Element#parents and Elements#parents to retrieve an element's ancestor chain
     <http://github.com/jhy/jsoup/issues/issue/20>

 * Fixes an issue where appending / prepending rows to a table (or  to similar implicit
    element structures) would create a redundant wrapping elements
       <http://github.com/jhy/jsoup/issues/issue/21>

 * Improved implicit close tag heuristic detection when parsing malformed HTML

 * Fixes an issue where text content after a script (or other data-node) was
     incorrectly added to the data node.
       <http://github.com/jhy/jsoup/issues/issue/22>

 * Fixes an issue where text order was incorrect when parsing pre-document
    HTML.
      <http://github.com/jhy/jsoup/issues/issue/23>

*** Release 1.1.1 [2010-Jun-08]
 * Added selector support for :eq, :lt, and :gt
 	<http://github.com/jhy/jsoup/issues/issue/16>

 * Added TextNode#text and TextNode#text(String)
 	<http://github.com/jhy/jsoup/issues/issue/18>

 * Throw exception if trying to parse non-text content
 	<http://github.com/jhy/jsoup/issues/issue/17>

 * Added Node#remove and Node#replaceWith
 	<http://github.com/jhy/jsoup/issues/issue/19>

 * Allow _ and - in CSS ID selectors (per CSS spec).
 	<http://github.com/jhy/jsoup/issues/issue/10>
 
 * Relative links are resolved to absolute when cleaning, to normalize
    output and to verify safe protocol. (Were previously discarded.)
      <http://github.com/jhy/jsoup/issues/issue/12>
 
 * Allow combinators at start of selector query, for query refinements
 	  <http://github.com/jhy/jsoup/issues/issue/13>

 * Added Element#val() and #val(String) methods, for form values
 	  <http://github.com/jhy/jsoup/issues/issue/14>

 * Changed textarea contents to parse as TextNodes, not DataNodes,
    so contents visible to text() (and val(), as treated as form input)
